@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 11,
+  "count": 22,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2023-10-12T00:00:00Z",
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2023-10-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
